--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "prettier": "^2.8.3"
   },
   "prettier": {
