--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.9.0",
     "mongoose-findorcreate": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
